Wed Apr 04 01:48:34 GMT 2012  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: If the database couldn't be opened, don't try
	  to reserve space for cross-checking doclens, as that just results in
	  us reporting a confusing warning about there being too many documents
	  to cross-check doclens.

Fri Mar 30 22:23:53 GMT 2012  Olly Betts <olly@survex.com>

	* backends/document.h: "An string" -> "A string" in internal doc
	  comment.

Fri Mar 30 22:20:11 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/weight.h: Fix switched lower and upper in doc comments
	  for Weight methods get_doclength_lower_bound() and
	  get_doclength_upper_bound().  Correct maximum to minimum in
	  get_doclength_lower_bound() comment and note that this excludes zero
	  length documents.  Fix "An lower" to "A lower".

Wed Mar 28 09:54:33 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Fix typos in another old entry.

Wed Mar 28 09:53:00 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: DatabaseCoruptError -> DatabaseCorruptError in old entries.

Wed Mar 28 08:05:13 GMT 2012  Olly Betts <olly@survex.com>

	* tests/termgentest.cc: Add test coverage for discarding of terms > 64
	  bytes by TermGenerator.

Tue Mar 27 21:07:07 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Note when Database::close() was added.

Tue Mar 27 13:03:22 GMT 2012  Olly Betts <olly@survex.com>

	* api/omenquire.cc,docs/deprecation.rst,include/xapian/enquire.h,
	  include/xapian/errorhandler.h: Deprecate Xapian::ErrorHandler.
	  (ticket#3)

Tue Mar 27 13:01:53 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,docs/deprecation.rst,docs/doxygen_api.conf.in,
	  docs/doxygen_source.conf.in: Updates for addition of
	  XAPIAN_DEPRECATED_EX() and XAPIAN_DEPRECATED_CLASS_EX.

Tue Mar 27 10:11:23 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,include/xapian.h,include/xapian/deprecated.h: Add
	  XAPIAN_DEPRECATED_EX() and XAPIAN_DEPRECATED_CLASS_EX macros which